<resources>
    <string name="app_name">Popular Movies</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="action_settings">Settings</string>
    <string name="release_date">Release date:</string>
    <string name="rating">Rating:</string>
    <string name="synopsis_mock">Armed with the astonishing ability to shrink in scale but increase in strength, con-man Scott Lang must embrace his inner-hero and help his mentor, Dr. Hank Pym, protect the secret behind his spectacular Ant-Man suit from a new generation of towering threats. Against seemingly insurmountable obstacles, Pym and Lang must plan and pull off a heist that will save the world.</string>

    <!--prefs-->
    <string name="pref_sorting_label_ratings">Highest-rated</string>
    <string name="pref_sorting_label_popular">Most popular</string>
    <string name="pref_sorting_ratings">vote_average.desc</string>
    <string name="pref_sorting_popular">popularity.desc</string>
    <string name="pref_sorting_key">pref_sorting</string>
    <string name="pref_sorting_label">Sort movies by</string>
    <string name="title_mock">Awesome Film</string>
    <string name="date_mock">7 Aug 2015</string>
    <string name="rating_mock">7.5</string>
</resources>
